# simoc-sam

./: .gitignore  Dockerfile  DockerfileRpi  EducationReadme.txt  MCP2221checktest.py  MCPRunner.py  README.md  basesensor.py  bash_aliases  bme688.py  config.cfg.tmpl  dev-requirements.txt  gdx_lite.py  hostinfo.py  index.html  mocksensor.py  netinfo.py  network_monitor.sh  open_port.sh  pyproject.toml  requirements.txt  runVernier.sh  scd30.py  senseutil.py  sensor.py  setup.sh  sgp30.py  simoc-sam.py  sioclient.py  sioserver.py  test_basesensor.py  test_sioclient.py  test_sioserver.py  tmux.sh  utils.py  vernier.py  vernierSetup.readme  vernier_CO2.py  vernier_O2.py
.github/: dependabot.yml
DemoScripts/: README.md
cassandra_database/: .env  README.md  cass_db.py  cass_install.sh  cassandra_connection.py  cassandra_models.py  cassandra_queries.py  cassandra_tables.py  config.yaml  config_parser.py  location.cfg  logging_config.py  requirements.txt  sensors.cfg  yaml_parser.py
configs/: Hotspot.nmconnection  README.md  csvwriter.service  display-runner@.service  mosquitto-local.conf  mqttbridge.service  mqttproxy.service  network-monitor.service  nmconnection.tmpl  rtc-update-pcf8523.service  rtc-update-pcf8523.timer  rtc-update-rpi.service  sensor-runner@.service  simoc_live.tmpl  siobridge.service  sqlwriter.service
gdx/: readme.md
sensors/: bme688.py  mocksensor.py  scd30.py  sensor_utils.py  sgp30.py  test_basesensor.py  vernier.py  vernier_CO2.py  vernier_O2.py
tests/: conftest.py  test_basesensor.py  test_baseserver.py  test_config.py  test_csv_writer.py  (+12 more)
(+61 files in other folders)
