[project]
name = "simoc_sam"
version = "0.1.0"
authors = [
  { name="Ezio Melotti", email="ezio.melotti@gmail.com" },
]
description = "Live backend for SAM at Biosphere 2"
readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/overthesun/simoc-sam"
"Bug Tracker" = "https://github.com/overthesun/simoc-sam/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
